# nyx

./: .gitignore  LICENSE  README.md  documentation.md  progress.md  pyproject.toml
.github/: FUNDING.yml
examples/: config.example.toml
examples/presets/: codex-cli.toml  desktop-full.toml  local-ollama.toml
nyx/: __init__.py  __main__.py  cli.py  config.py  control.py  daemon.py  intent_router.py  logging.py
nyx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nyx/bridges/: __init__.py  base.py  factory.py  hyprland.py  stub.py
nyx/calendar/: __init__.py  ical.py  service.py
nyx/context/: __init__.py  compaction.py
nyx/macros/: __init__.py  runtime.py
nyx/modules/: __init__.py  calendar.py  cross_device_sync.py  git_github.py  macros.py  memory.py  notes.py  rag.py  screen_context.py  skills.py  system_control.py  system_monitor.py  tasks.py  web_lookup.py
nyx/monitors/: __init__.py  service.py  store.py
nyx/providers/: __init__.py  base.py  http.py  registry.py  subprocess_cli.py
nyx/rag/: __init__.py  embeddings.py  service.py  store.py
nyx/skills/: __init__.py  runtime.py  scheduler.py
nyx/sync/: __init__.py  service.py
nyx/ui/: __init__.py  entrypoint.py  history_store.py  launcher.py  monitors.py  panel.py  rendering.py  session.py  settings.py  styles.py  theme.py  workspace.py
nyx/voice/: __init__.py  transcriber.py
nyx/web/: __init__.py  service.py
nyx/workspace/: __init__.py  facade.py  models.py  repo.py  state.py  store.py
systemd/: nyx.service
tests/: test_bridge_factory.py  test_calendar_module.py  test_cli.py  test_compaction.py  test_config.py  test_control.py  test_cross_device_sync_module.py  test_daemon.py  test_git_github_module.py  test_history_store.py  test_hyprland_bridge.py  test_intent_router.py  test_launcher.py  test_macros_module.py  test_memory_module.py  test_notes_module.py  test_providers.py  test_rag.py  test_rendering.py  test_screen_context.py  test_skills_module.py  test_sync_service.py  test_system_control.py  test_system_monitor_module.py  test_tasks_module.py  test_ui_monitors.py  test_voice_transcriber.py  test_web_lookup_module.py  test_workspace.py  test_workspace_store.py
