[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nyx"
version = "0.1.0"
description = "Nyx local-first AI assistant daemon."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "assistant", "linux", "hyprland", "wayland", "ollama", "gtk4"]
authors = [
  { name = "Nyx Contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Desktop Environment",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "chromadb>=1.1,<2",
  "google-api-python-client>=2.170,<3",
  "google-auth-httplib2>=0.2,<1",
  "google-auth-oauthlib>=1.2,<2",
  "httpx>=0.27,<1",
  "psutil>=7,<8",
]

[project.urls]
Homepage = "https://github.com/Yayky/nyx"
Repository = "https://github.com/Yayky/nyx"
Issues = "https://github.com/Yayky/nyx/issues"

[project.scripts]
nyx = "nyx.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["nyx", "nyx.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
